src/FinancialForce Accounting/objects/codaPaymentAccountSelection__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Account Selections</relationshipLabel>
        <relationshipName>PaymentAccountSelections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Payment Account Selections</relationshipLabel>
        <relationshipName>PaymentAccountSelections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:Payment Account Selection</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Account Selection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Account Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>